<resources>
    <string name="app_name">S. Merenda</string>

    <!-- Diálogos -->
        <string name="dialogo_button_ok">Ok</string>
        <string name="dialogo_button_cancel">Cancelar</string>
        <string name="dialogo_button_sim">Sim</string>
        <string name="dialogo_button_nao">Não</string>

        <string name="dialogo_titulo_cancelar_requisicao">Cancelar Requisição de Alimentos</string>
        <string name="dialogo_mensagem_cancelar_requisicao">Deseja sair e cancelar a RA?</string>

    <!-- Titulos das activitys -->
        <string name="visualiza_requisicao_activity">Visualizando Requisição de Alimento</string>

        <!-- cadastra envio activity -->
        <string name="cadastra_envio_titulo_activity">Informações do Envio</string>
        <string name="cadastra_envio_nome_activity_1">Selecione a obra</string>
        <string name="cadastra_envio_nome_activity_2">Selecione os itens</string>
        <string name="cadastra_envio_nome_activity_3">Cadastre as quantidades</string>
        <string name="cadastra_envio_nome_activity_4">Confirme as informações</string>

        <!-- cadastra recebimento activity -->
        <string name="cadastra_recebimento_titulo">Informações do Recebimento</string>
        <string name="cadastra_recebimento_nome_activity_1">Selecione o envio</string>
        <string name="cadastra_recebimento_nome_activity_2">Cadastre as quantidades</string>
        <string name="cadastra_recebimento_nome_activity_3">Confirme as informações</string>

        <!-- cadastra pedido activity -->
        <string name="cadastra_requisicao_titulo_activity">Informações da RA</string>
        <string name="cadastra_pedido_titulo_activity_0">Tipo de transação</string>
        <string name="cadastra_pedido_titulo_activity_00">Selecione a obra</string>
        <string name="cadastra_pedido_titulo_activity_1">Selecione os alimentos</string>
        <string name="cadastra_pedido_titulo_activity_2">Cadastre as quantidades</string>
        <string name="cadastra_pedido_titulo_activity_3">Confirme as informações</string>
        <string name="infoEnviosp">Informações do Envio Sem Pedido</string>


    <!-- Top Bar - Motorista -->
    <string name="passo1">Passo 1 de 4</string>
    <string name="passo2">Passo 2 de 4</string>
    <string name="passo3">Passo 3 de 4</string>
    <string name="passo4">Passo 4 de 4</string>
    <string name="proximo_itens">Próximo: Itens</string>
    <string name="proximo_quantidades">Próximo: Quantidades</string>
    <string name="proximo_confirmar">Próximo: Confirmar</string>

    <!-- Bottom Bar -->
    <string name="anterior"> ANTERIOR </string>
    <string name="proximo">PRÓXIMO</string>
    <string name="confirmar">CONFIRMAR</string>

    <!-- Cadastra Motorista -->
    <string name="infoEnvio">Informações de envio</string>


    <!-- Top Bar - Pedido -->
    <string name="passo1b">Passo 1 de 5</string>
    <string name="passo2b">Passo 2 de 5</string>
    <string name="passo3b">Passo 3 de 5</string>
    <string name="passo4b">Passo 4 de 5</string>
    <string name="passo5b">Passo 5 de 5</string>
    <string name="proxfornecedor">Próximo: Fornecedor</string>3
    <string name="proxitens">Próximo: Itens</string>
    <string name="prox_materiais">Próximo: Alimentos</string>
    <string name="info_pedido">Informações da RM</string>



    <!-- Cadastrar pedido -->
    <string name="pedido_fornecedor">Pedir para fornecedor</string>
    <string name="pedido_nucleo">Pedir para Núcleo</string>
    <string name="pedido_obra">Enviar para obra</string>
    <string name="selecione_fornecedor">Selecione um fornecedor</string>
    <string name="selecione_contrato">Selecione um contrato</string>
    <string name="selecione_nucleo">Selecione um núcleo</string>
    <string name="selecione_obra">Selecione a Obra</string>
    <string name="cadastra_itens">Próximo: Cadastrar</string>


    <!-- Login activity -->
    <string name="campos_nao_preenchidos">Preencha os campos.</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado!</string>
    <string name="senha_invalida">Senha inválida!</string>


    <!-- Formatações -->
    <string name="numero_em_parenteses">(%d)</string>
    <string name="layout_destino">%s %s</string>

    <!-- Erros -->
    <string name="erro_carrega_lista_pedido">Erro ao carregar RAs.\nAperte para tentar novamente.</string>
    <string name="erro_lista_pedido_vazia">Nenhuma RA cadastrada.\nAperte para atualizar.</string>

    <string name="erro_carrega_estoque">Erro ao carregar estoque.\nAperte para tentar novamente.</string>
    <string name="erro_estoque_vazio">Nenhum alimento em estoque.\nAperte para atualizar.</string>


    <string name="erro_carrega_lista_item_estoque">Erro ao carregar alimentos disponíveis.\nAperte para tentar novamente.</string>
    <string name="erro_nenhum_item_cadastrado">Nenhum alimento em estoque.\nAperte para atualizar.</string>
    <string name="erro_carrega_pedido">Erro ao carregar RA.\nAperte para tentar novamente.</string>

    <string name="erro_carrega_lista_envio">Erro ao carregar envios.\nAperte para tentar novamente.</string>
    <string name="erro_lista_envio_vazia">Nenhum envio feito.\nAperte para atualizar.</string>

    <string name="erro_carrega_lista_item_envio">Erro ao carregar alimentos.\nAperte para tentar novamente.</string>
    <string name="erro_carrega_lista_obra">Erro ao carregar obras.\nAperte para tentar novamente.</string>
</resources>
