<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data
            tools:ignore="MissingConstraints">
        <variable
                name="loginViewModel"
                type="package com.lemobs_sigelu.gestao_estoques.ui.login.LoginViewModel"/>
    </data>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/divider_light">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/logo"/>

        <TextView
                android:id="@+id/iv_versao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="v1.0.0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"/>

    </android.support.constraint.ConstraintLayout>


    <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintVertical_bias="0.1"
            android:layout_marginTop="@dimen/espacamento_grande"
            android:text="Login"
            android:textColor="@color/primary_text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
            android:id="@+id/layout_ll_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            app:layout_constraintLeft_toLeftOf="@id/text_login"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/espacamento_maximo"
            android:layout_marginEnd="@dimen/espacamento_maximo"
            android:layout_marginTop="@dimen/espacamento_curto"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/divider"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_user"/>
        </LinearLayout>

        <EditText
                android:text="@={viewModel.username}"
                android:id="@+id/edt_matricula"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dip"
                android:background="@color/divider_light"
                android:inputType="text"
                android:padding="6dp" />

    </LinearLayout>

    <TextView
            android:id="@+id/text_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_ll_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginTop="@dimen/espacamento_grande"
            android:text="Senha"
            android:textColor="@color/primary_text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
            android:id="@+id/layout_ll_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_senha"
            app:layout_constraintLeft_toLeftOf="@id/text_senha"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/espacamento_maximo"
            android:layout_marginEnd="@dimen/espacamento_maximo"
            android:layout_marginTop="@dimen/espacamento_curto"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/divider"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageView_cadeado"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_user"/>
        </LinearLayout>

        <EditText
                android:text="@={viewModel.password}"
                android:id="@+id/edt_senha"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dip"
                android:background="@color/divider_light"
                android:inputType="text"
                android:padding="6dp" />

    </LinearLayout>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/layout_ll_senha"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/espacamento_maximo"
            android:layout_marginLeft="@dimen/espacamento_maximo"
            android:layout_marginTop="@dimen/espacamento_maximo"
            android:background="@drawable/rounded_button_states"
            android:text="AUTENTICAR"
            android:textColor="@android:color/white" />

    <ProgressBar
            android:id="@+id/ll_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible">
    </ProgressBar>


</android.support.constraint.ConstraintLayout>